Henter produkter dynamisk via javascript

--- a/LEGOdudes_webshop/styles.css
+++ b/LEGOdudes_webshop/styles.css
@@ -99,12 +99,15 @@ header {
 }
 
 main {
-    display: flex;
-    gap: 1rem;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-left: 1rem;
-    padding-right: 1rem;
+
+    #productlist {
+        display: flex;
+        gap: 1rem;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 
     h2 {
         width: 100%;
